clusters/apps/default/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: default
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-pod
  template:
    metadata:
      labels:
        app: server-pod
    spec:
      containers:
        - image: ghcr.io/crisszkutnik/server:0.0.3
          imagePullPolicy: IfNotPresent
          name: server-container
          resources:
            requests:
              memory: "64Mi"
              cpu: 0.1
            limits:
              memory: "512Mi"
              cpu: 0.5
          ports:
            - containerPort: 8080
