clusters/apps/default/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
  labels:
    app: server
spec:
  selector:
    app: server-pod
  ports:
    - name: http
      port: 8080
      targetPort: 8080
