clusters/apps/default/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: true
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: public-k8s.cristobalszk.dev
      http:
        paths:
          - path: /server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 8080
